--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Download and convert youtube videos to mp3 in realtime",
   "main": "index.js",
   "scripts": {
+  	"start": "node index.js",
     "test": "test"
   },
   "keywords": [
