--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Download and convert youtube videos to mp3 in realtime",
   "main": "index.js",
   "scripts": {
-  	"start": "node index.js",
+    "start": "node index.js",
     "test": "test"
   },
   "keywords": [
@@ -16,9 +16,11 @@
   "author": "Dmitry Samokhin Ice",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "express": "^4.16.3",
+    "body-parser": "^1.19.0",
+    "content-disposition": "^0.5.3",
+    "express": "^4.17.1",
     "fluent-ffmpeg": "^2.1.2",
+    "sanitize-filename": "^1.6.1",
     "ytdl-core": "^0.29.2"
   }
 }
